# ur10moveit2

./: README.md
moveit2_scripts/: CMakeLists.txt  package.xml
moveit2_scripts/launch/: UR10_Pick_Place.launch.py  double_motion_pose.launch.py  goal_pose_trajectory.launch.py  kinematics_plugin_trajectory.launch.py  ur_collission_pick_placeV1.launch.py  ur_goal_pose_trajectory.launch.py  ur_ik_collission.launch.py  ur_ik_collission_pick_place.launch.py  ur_ik_collission_pick_place_attach.launch.py  ur_moveit_objects.launch.py
moveit2_scripts/src/: UR10_Pick_Place copy 2.cpp  UR10_Pick_Place.cpp  double_motion_pose.cpp  goal_pose_trajectory.cpp  kinematics_plugin_trajectory.cpp  pick_and_place_trajectory.cpp  ur_collission_pick_placeV1.cpp  ur_goal_pose_trajectory.cpp  ur_ik_collission.cpp  ur_ik_collission_pick_place.cpp  ur_ik_collission_pick_place_attach-V2.cpp  ur_ik_collission_pick_place_attach.cpp  ur_moveit.cpp  ur_moveit_objects.cpp
ur10_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur10_moveit_config/config/: kinematics.yaml  moveit_controllers.yaml  ur.srdf  ur.urdf.xacro
ur10_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
